# clotho

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  license_header_code  license_header_make
examples/: CMakeLists.txt  benchmark.cpp  benchmark_all_neutral.cpp  common_commandline.cpp  common_commandline.h  common_strings.cpp  common_strings.cpp.deprecated  common_strings.h  config.h  generation_parameter.cpp  generation_parameter.hpp  logging_parameter.cpp  logging_parameter.hpp  population_graphs.cpp  population_graphs.h  population_parameter.cpp  population_parameter.hpp  seed_parameter.cpp  seed_parameter.hpp  simulation_config.cpp  simulation_config.h  simulation_config_json.cpp  simulation_config_json.h
examples/QTLSim/: CMakeLists.txt  engine_batched_task.hpp  engine_cuda_host_random.hpp  engine_def.hpp  engine_logger.cpp  engine_logger.hpp  engine_parallel_pipeline.hpp  engine_parallel_pipeline_batched.hpp  engines.hpp  log_writer.cpp  log_writer.hpp  main.cpp  main.cu  qtl_cuda_simulate_engine.hpp  qtlsim_common.cpp  qtlsim_common.hpp  qtlsim_config.hpp  qtlsim_engine.hpp  qtlsim_engine_mt.hpp  qtlsim_engine_mt2.hpp  qtlsim_engine_mt3.hpp  qtlsim_logger.cpp  qtlsim_logger.hpp  qtlsim_main.cpp  qtlsim_main_mt.cpp  qtlsim_parameters.hpp  sim_engine.hpp  simulation_log.cpp  simulation_log.hpp  thread_count_parameter.hpp
examples/QTLSim/options/: configuration_option.cpp  log_prefix_option.hpp
examples/benchmark/: CMakeLists.txt  README  basic_allele.h  benchmark.cpp
examples/cuda/: CMakeLists.txt  compute_capability.hpp  square.h  square_list.cpp
examples/cuda/compute_capability/: compute_capability30.hpp  compute_capability_def.hpp
examples/cuda/execution_configuration/: execution_configuration_def.hpp
examples/cuda/qtl/: CMakeLists.txt  adjacency_matrix.cu  adjacency_matrix.h  complex_adjacency_matrix.cu  complex_adjacency_matrix.h  device_init.h  device_properties.cu  device_properties.h  page_manager.cu  page_manager.h  qtl_cuda.cpp
examples/cuda/qtl_cuda/: CMakeLists.txt  main.cu  qtl_cuda_simulate_engine.hpp  simulation_log.cpp  simulation_log.hpp
examples/cuda/qtl_thrust/: CMakeLists.txt  commandline_actions.hpp  compute_capabilities.hpp  config.hpp  config_manager.cpp  config_manager.hpp  crossover_matrix.cu  crossover_matrix.hpp  curand_gen_base.hpp  curand_poisson_wrapper.hpp  curand_uniform_wrapper.hpp  generations_option.cpp  generations_option.hpp  help_commandline_option.cpp  iconfigurable.hpp  kvsort_test.cu  main.cpp  mutation_rate_option.cpp  mutation_rate_option.hpp  population_metadata.cu  population_metadata.hpp  population_recombiner.cu  population_recombiner.hpp  population_size_option.cpp  population_size_option.hpp  qtl_thrust_general_options.cpp  qtl_thrust_general_options.hpp  random_number_options.cpp  random_number_options.hpp  recombination_rate_option.cpp  recombination_rate_option.hpp  scatter_mutations.cu  scatter_mutations.hpp  simulate_engine.cu  simulate_engine.hpp  warp_kvsort.hpp
examples/cuda/sandbox/: CMakeLists.txt  basic_buffered_stream.hpp  buffer_test.cpp  buffered_stream.hpp  buffered_stream_def.hpp  cuda_mt19937.cu  cuda_mt19937.h  double_buffered_mutex_stream.hpp  double_buffered_stream.hpp  generatable_type_trait.hpp  generate_test.cpp  igenerator.hpp  popcount_kernel.h  square.cu  square.h  square_host.cu  square_host.h  square_list.cpp  square_stream.cu  square_stream.h
examples/cuda/unittests/: CMakeLists.txt  crossover_test.cu  crossover_validate.hpp  kvsort_test.cu  validate_crossover_matrix_5.hpp  validate_order.hpp
examples/qtl/: CMakeLists.txt  EffectSizeMatrix.hpp  README  fitness_generator.hpp  infinite_site.hpp  qtl_config.hpp  qtl_estimator.cpp  qtl_logging_parameter.cpp  qtl_logging_parameter.hpp  simulate_engine.hpp  simulate_engine_base.hpp
examples/sim/: allele.hpp  allele_space.hpp  effect_space.hpp  individual.hpp  individual_space.hpp  locus.hpp  locus_space.hpp  sequence.hpp  sequence_space.hpp
examples/simupop/: benchmark_comp.py  benchmark_comp_binary_opt.py  json_reformatter.py  neutral_binary.py  neutral_mutant.py
src/clotho/cuda/: CMakeLists.txt  curand_state_pool.cu
src/clotho/fitness/: CMakeLists.txt  constant_fitness_generator.cpp  constant_fitness_metric.cpp  fitness_toolkit.cpp  normal_fitness_generator.cpp  normal_fitness_metric.cpp  quadratic_fitness_generator.cpp  quadratic_fitness_metric.cpp  quadratic_fitness_parameter.cpp  random_fitness_generator.cpp  random_fitness_metric.cpp
src/clotho/genetics/: CMakeLists.txt  fitness_toolkit.cpp  linear_population_growth.cpp  linear_population_growth_generator.cpp  normal_fitness_generator.cpp  normal_fitness_metric.cpp  population_growth_toolkit.cpp  predefined_population_growth.cpp  predefined_population_growth_generator.cpp  quadratic_fitness_generator.cpp  quadratic_fitness_metric.cpp  (+2 more)
src/examples/: CMakeLists.txt  basic_allele.h  benchmark.cpp  benchmark_all_neutral.cpp  common_commandline.cpp  common_commandline.h  common_strings.cpp  config.h  population_graphs.cpp  simulation_config.cpp  simulation_config.h  simulation_config_json.cpp  simulation_config_json.h
unittest/: CMakeLists.txt  test_main.cpp  unittest_config.h
unittest/classifiers/: CMakeLists.txt  hash_classifier_test.cpp  region_classifier_test.cpp
unittest/data_spaces/: CMakeLists.txt  allele_generator_test.cpp  allele_test.cpp  association_matrix_test.cpp  column_aligned_genetic_space_test.cpp  crossover_test.cpp  free_space_test.cpp  genetic_space_test.cpp  linear_phenotype_test.cpp  mutation_test.cpp  row_grouped_crossover_test.cpp  row_grouped_free_space_test.cpp  row_grouped_genetic_space_test.cpp  row_grouped_trait_accumulator_test.cpp  selection_test.cpp  trait_accumulator_test.cpp
unittest/fitness/: CMakeLists.txt  bit_block_fitness_test.cpp
unittest/powerset/: CMakeLists.txt  element_generator_test.cpp  powerset_test.cpp  powerset_test2.cpp  recombination_test.cpp  recombination_test2.cpp  test_element.h
unittest/utility/: CMakeLists.txt  bit_walker_test.cpp  debruijn_bit_walker_test.cpp  popcount_test.cpp
(+667 files in other folders)
